<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">AccessToilet Berlin</string>
    <string name="toilets_loaded">%1$d Toiletten geladen</string>
    <string name="toilets_load_error">Die Toilettendaten konnten nicht geladen werden. Bitte starte die App erneut. Die Basiskarte bleibt nutzbar.</string>
    <string name="details_default_title">Öffentliche Toilette</string>
    <string name="details_address">Adresse</string>
    <string name="details_distance">Entfernung</string>
    <string name="details_opening_hours">Öffnungszeiten</string>
    <string name="details_wheelchair">Rollstuhleignung</string>
    <string name="details_fee">Gebühr</string>
    <string name="details_changing_table">Wickeltisch</string>
    <string name="details_access">Zugang</string>
    <string name="details_indoor">Innen/Außen</string>
    <string name="details_payment_method">Zahlungsart</string>
    <string name="details_operator">Betreiber</string>
    <string name="details_source">Quelle</string>
    <string name="details_source_id">Quell-ID</string>
    <string name="details_data_status">Datenstand</string>
    <string name="details_latitude">Breitengrad</string>
    <string name="details_longitude">Längengrad</string>
    <string name="details_close">Schließen</string>
    <string name="details_route_show">Route anzeigen</string>
    <string name="details_reports">Meldungen</string>
    <string name="details_lookup_error">Die ausgewählte Toilette konnte nicht zugeordnet werden.</string>
    <string name="value_yes">Ja</string>
    <string name="value_no">Nein</string>
    <string name="value_limited">Eingeschränkt</string>
    <string name="value_unknown">Unbekannt</string>
    <string name="value_no_information">Keine Angabe</string>
    <string name="value_free">Kostenlos</string>
    <string name="value_paid">Kostenpflichtig</string>
    <string name="value_public">Öffentlich</string>
    <string name="value_indoor">Innen</string>
    <string name="value_outdoor">Außen</string>
    <string name="location_show">Standort</string>
    <string name="location_show_content_description">Aktuellen Standort auf der Karte anzeigen</string>
    <string name="location_permission_required">Für die Standortanzeige wird eine Standortberechtigung benötigt.</string>
    <string name="location_permission_denied">Die Standortberechtigung wurde abgelehnt. Die Karte bleibt nutzbar.</string>
    <string name="location_locating">Standort wird ermittelt.</string>
    <string name="location_unavailable">Standort ist derzeit nicht verfügbar.</string>
    <string name="location_services_disabled">Standortdienste sind möglicherweise deaktiviert.</string>
    <string name="filter_button">Filter</string>
    <string name="filter_button_active">Filter: %1$d</string>
    <string name="filter_content_description">Toilettenfilter öffnen</string>
    <string name="filter_title">Toiletten filtern</string>
    <string name="filter_wheelchair">Rollstuhleignung</string>
    <string name="filter_fee">Gebühr</string>
    <string name="filter_changing_table">Wickeltisch</string>
    <string name="filter_all">Alle</string>
    <string name="filter_apply">Anwenden</string>
    <string name="filter_reset">Zurücksetzen</string>
    <string name="filter_cancel">Abbrechen</string>
    <string name="filter_loading">Die Toilettendaten werden noch geladen.</string>
    <string name="filter_result">%1$d von %2$d Toiletten sichtbar</string>
    <string name="filter_no_results">Keine Toiletten entsprechen den gewählten Filtern.</string>
    <string name="nearby_button">In der Nähe</string>
    <string name="nearby_content_description">Nächste passende Toiletten in der Nähe anzeigen</string>
    <string name="nearby_data_loading">Die Toilettendaten werden noch geladen.</string>
    <string name="nearby_location_required">Bitte zuerst den Standort über „Standort“ aktivieren.</string>
    <string name="nearby_title">Nächste passende Toiletten</string>
    <string name="nearby_no_results">Keine Toilette entspricht den aktuellen Filtern.</string>
    <string name="nearby_fallback_name">Toilette %1$s</string>
    <string name="nearby_candidate_item">%1$s\n%2$s</string>
    <string name="distance_location_unavailable">Standort nicht verfügbar</string>
    <string name="distance_airline_zero">0 m Luftlinie</string>
    <string name="distance_airline_meters">ca. %1$d m Luftlinie</string>
    <string name="distance_airline_kilometers">ca. %1$s km Luftlinie</string>
    <string name="route_location_required">Bitte zuerst den Standort aktivieren.</string>
    <string name="route_no_network">Keine Netzwerkverbindung. Die Karte und die Luftlinienentfernung bleiben nutzbar.</string>
    <string name="route_in_progress">Fußroute wird berechnet …</string>
    <string name="route_request_too_soon">Bitte kurz warten, bevor du erneut eine Route anfragst.</string>
    <string name="route_remove">Route entfernen</string>
    <string name="route_remove_content_description">Angezeigte Fußroute von der Karte entfernen</string>
    <string name="route_summary">Fußweg: %1$s · ca. %2$s</string>
    <string name="route_length_meters">%1$d m</string>
    <string name="route_length_kilometers">%1$s km</string>
    <string name="route_duration_minutes">%1$d min</string>
    <string name="route_duration_hours">%1$d h</string>
    <string name="route_duration_hours_minutes">%1$d h %2$d min</string>
    <string name="route_accessibility_notice">Fußroute auf Basis von OpenStreetMap-Daten. Die tatsächliche Zugänglichkeit kann abweichen.</string>
    <string name="route_error_timeout">Der Routingdienst antwortet nicht rechtzeitig. Bitte versuche es später erneut.</string>
    <string name="route_error_rate_limit">Der Routingdienst ist derzeit ausgelastet. Bitte versuche es später erneut.</string>
    <string name="route_error_server">Der Routingdienst ist derzeit nicht verfügbar. Bitte versuche es später erneut.</string>
    <string name="route_error_request">Für diese Punkte konnte keine Fußroute angefordert werden.</string>
    <string name="route_error_response">Der Routingdienst hat keine gültige Fußroute geliefert.</string>
    <string name="route_error_network">Die Fußroute konnte wegen eines Netzwerkfehlers nicht geladen werden.</string>
    <string name="reports_title">Lokale Meldungen</string>
    <string name="reports_title_count">Lokale Meldungen (%1$d)</string>
    <string name="reports_new">Neue Meldung</string>
    <string name="reports_empty">Für diese Toilette sind auf diesem Gerät noch keine lokalen Meldungen gespeichert.</string>
    <string name="reports_loading">Lokale Meldungen werden noch geladen.</string>
    <string name="report_category_title">Kategorie auswählen</string>
    <string name="report_category_defect">Defekt</string>
    <string name="report_category_closed">Geschlossen</string>
    <string name="report_category_cleanliness">Mangelnde Sauberkeit</string>
    <string name="report_category_missing_equipment">Fehlende Ausstattung</string>
    <string name="report_category_barrier">Barriere</string>
    <string name="report_category_wrong_location">Falscher Standort</string>
    <string name="report_category_odor">Geruchsbelästigung</string>
    <string name="report_category_unknown">Unbekannte Kategorie</string>
    <string name="report_note_hint">Notiz (optional)</string>
    <string name="report_local_storage_notice">Diese Meldung wird nur lokal auf diesem Gerät gespeichert und nicht übertragen.</string>
    <string name="report_local_detail_notice">Nur lokal auf diesem Gerät gespeichert.</string>
    <string name="report_save">Speichern</string>
    <string name="report_cancel">Abbrechen</string>
    <string name="report_delete">Löschen</string>
    <string name="report_back">Zurück</string>
    <string name="report_saved">Meldung gespeichert.</string>
    <string name="report_deleted">Meldung gelöscht.</string>
    <string name="report_save_error">Meldung konnte nicht gespeichert werden.</string>
    <string name="report_delete_error">Meldung konnte nicht gelöscht werden.</string>
    <string name="reports_load_error">Lokale Meldungen konnten nicht geladen werden.</string>
    <string name="report_delete_title">Lokale Meldung löschen?</string>
    <string name="report_delete_message">Die Meldung wird dauerhaft von diesem Gerät entfernt.</string>
    <string name="report_no_note">Keine Notiz</string>
    <string name="report_list_item">%1$s · %2$s\n%3$s</string>
    <string name="report_list_item_without_note">%1$s · %2$s</string>
    <string name="report_detail_text">%1$s\n%2$s\n\n%3$s\n\n%4$s</string>
</resources>
